parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID np_var_a1 SCOLO np_var_a2 vars np_goto_main function body
Rule 2     vars -> VAR type vars_1 SCOLO vars
Rule 3     vars -> empty
Rule 4     vars_1 -> ID np_var_2 vars_2
Rule 5     vars_1 -> ID np_var_2 vars_2 COMA vars_1
Rule 6     vars_2 -> array_declare
Rule 7     vars_2 -> empty
Rule 8     function -> function_t ID np_var_b2 np_var_b3 LPAREN function_v RPAREN LBRACK vars statutes RBRACK np_var_b6 function
Rule 9     function -> empty
Rule 10    function_t -> VOID np_var_1
Rule 11    function_t -> t_number
Rule 12    function_t -> t_string
Rule 13    function_t -> t_bool
Rule 14    function_t -> t_graph
Rule 15    function_v -> function_v1
Rule 16    function_v -> empty
Rule 17    function_v1 -> type np_var_b4 ID np_var_b5
Rule 18    function_v1 -> type np_var_b4 ID np_var_b5 COMA function_v1
Rule 19    function_v1 -> type np_var_b4 ID np_var_b5 array_declare
Rule 20    function_v1 -> type np_var_b4 ID np_var_b5 array_declare COMA function_v1
Rule 21    body -> MAIN np_var_c1 LPAREN RPAREN LBRACK np_var_c2 vars statutes RBRACK np_eof debug np_var_c3
Rule 22    type -> t_number
Rule 23    type -> t_string
Rule 24    type -> t_bool
Rule 25    type -> t_graph
Rule 26    t_number -> INT np_var_1
Rule 27    t_number -> FLOAT np_var_1
Rule 28    t_string -> STRING np_var_1
Rule 29    t_string -> CHAR np_var_1
Rule 30    t_bool -> BOOL np_var_1
Rule 31    t_graph -> NODE np_var_1
Rule 32    t_graph -> ARC np_var_1
Rule 33    t_graph -> UNDIRECTED np_var_1
Rule 34    t_graph -> DIRECTED np_var_1
Rule 35    array_declare -> np_var_3 LCORCH CTE_INT np_var_4 RCORCH array_declare_1 np_var_7
Rule 36    array_declare_1 -> np_var_5 LCORCH CTE_INT np_var_6 RCORCH
Rule 37    array_declare_1 -> empty
Rule 38    statutes -> statutes_1 statutes
Rule 39    statutes -> empty
Rule 40    statutes_1 -> assignation
Rule 41    statutes_1 -> writing
Rule 42    statutes_1 -> condition
Rule 43    statutes_1 -> cycle
Rule 44    statutes_1 -> function_call SCOLO
Rule 45    statutes_1 -> method SCOLO
Rule 46    statutes_1 -> return
Rule 47    assignation -> ID np_quad_a2 EQL np_quad_b expression np_quad_assign SCOLO
Rule 48    assignation -> ID np_quad_a2 array_access EQL np_quad_b expression np_quad_assign SCOLO
Rule 49    writing -> PRINT np_quad_b LPAREN writing_1 RPAREN np_quad_print SCOLO
Rule 50    writing_1 -> expression
Rule 51    writing_2 -> expression SUMA np_quad_b writing_1 np_quad_c2
Rule 52    condition -> IF LPAREN expression np_statutes_a1 RPAREN LBRACK statutes RBRACK condition_1 np_statutes_a3
Rule 53    condition_1 -> ELSE np_statutes_a2 LBRACK statutes RBRACK
Rule 54    condition_1 -> empty
Rule 55    cycle -> c_while
Rule 56    cycle -> c_do
Rule 57    cycle -> c_for
Rule 58    cycle -> c_forin
Rule 59    c_while -> WHILE np_statutes_b1 LPAREN expression RPAREN np_statutes_b2 LBRACK statutes RBRACK np_statutes_b3
Rule 60    c_do -> DO np_statutes_c1 LBRACK statutes RBRACK WHILE LPAREN expression RPAREN SCOLO np_statutes_c2
Rule 61    c_for -> FOR LPAREN ID SCOLO np_statutes_d1 expression np_statutes_d2 SCOLO assignation np_statutes_d3 RPAREN LBRACK statutes RBRACK np_statutes_d4
Rule 62    c_forin -> FOR LPAREN ID IN ID RPAREN LBRACK statutes RBRACK
Rule 63    function_call -> ID LPAREN np_era function_call_1 RPAREN np_gosub
Rule 64    function_call -> ID LPAREN np_era RPAREN np_gosub
Rule 65    function_call_1 -> expression np_param
Rule 66    function_call_1 -> expression np_param COMA function_call_1
Rule 67    return -> RETURN expression np_return SCOLO
Rule 68    expression -> exp_lv1
Rule 69    expression -> exp_lv1 AND np_quad_b expression np_quad_c0
Rule 70    expression -> exp_lv1 OR np_quad_b expression np_quad_c0
Rule 71    exp_lv1 -> exp_lv2 exp_lv1_1
Rule 72    exp_lv1_1 -> LESST np_quad_b exp_lv2 np_quad_c1
Rule 73    exp_lv1_1 -> MORET np_quad_b exp_lv2 np_quad_c1
Rule 74    exp_lv1_1 -> LESSEQUAL np_quad_b exp_lv2 np_quad_c1
Rule 75    exp_lv1_1 -> MOREEQUAL np_quad_b exp_lv2 np_quad_c1
Rule 76    exp_lv1_1 -> EQUALTO np_quad_b exp_lv2 np_quad_c1
Rule 77    exp_lv1_1 -> NOTEQUALTO np_quad_b exp_lv2 np_quad_c1
Rule 78    exp_lv1_1 -> empty
Rule 79    exp_lv2 -> exp_lv3
Rule 80    exp_lv2 -> exp_lv3 SUMA np_quad_b exp_lv2 np_quad_c2
Rule 81    exp_lv2 -> exp_lv3 SUB np_quad_b exp_lv2 np_quad_c2
Rule 82    exp_lv3 -> exp_lv4
Rule 83    exp_lv3 -> exp_lv4 MUL np_quad_b exp_lv3 np_quad_c3
Rule 84    exp_lv3 -> exp_lv4 DIV np_quad_b exp_lv3 np_quad_c3
Rule 85    exp_lv3 -> exp_lv4 RESD np_quad_b exp_lv3 np_quad_c3
Rule 86    exp_lv4 -> exp_lv5
Rule 87    exp_lv4 -> NOT np_quad_b exp_lv5 np_quad_c4
Rule 88    exp_lv5 -> RPAREN expression LPAREN
Rule 89    exp_lv5 -> var_cte
Rule 90    exp_lv5 -> function_call
Rule 91    exp_lv5 -> method
Rule 92    exp_lv5 -> ID np_quad_a2
Rule 93    exp_lv5 -> ID np_quad_a2 array_access
Rule 94    array_access -> np_quad_d1 LCORCH arrary_access_1 np_quad_d2 RCORCH arrary_access_2 np_quad_d5
Rule 95    arrary_access_1 -> CTE_INT np_quad_a1_int
Rule 96    arrary_access_1 -> ID np_quad_a2
Rule 97    arrary_access_2 -> np_quad_d3 LCORCH arrary_access_1 np_quad_d4 RCORCH
Rule 98    arrary_access_2 -> empty
Rule 99    var_cte -> CTE_INT np_quad_a1_int
Rule 100   var_cte -> CTE_FLO np_quad_a1_flt
Rule 101   var_cte -> CTE_BOO np_quad_a1_bol
Rule 102   var_cte -> CTE_STRING np_quad_a1_str
Rule 103   var_cte -> CTE_CHAR np_quad_a1_chr
Rule 104   method -> ID np_graph_1 DOT method_t
Rule 105   method_t -> DEGREE LPAREN expression np_graph_2 RPAREN
Rule 106   method_t -> ADDNODE LPAREN expression COMA expression np_graph_3 RPAREN
Rule 107   method_t -> GETNODE LPAREN expression np_graph_4 RPAREN
Rule 108   method_t -> ADDCONN LPAREN expression COMA expression COMA expression np_graph_5 RPAREN
Rule 109   method_t -> PRINTCO LPAREN expression np_graph_6 RPAREN
Rule 110   method_t -> SHORTWE LPAREN expression COMA expression np_graph_7 RPAREN
Rule 111   method_t -> SHORTNO LPAREN expression COMA expression np_graph_8 RPAREN
Rule 112   method_t -> DELETEC LPAREN expression COMA expression np_graph_9 RPAREN
Rule 113   method_t -> DELETEN LPAREN expression np_graph_10 RPAREN
Rule 114   method_t -> DIAMETER
Rule 115   method_t -> ARC
Rule 116   np_graph_1 -> empty
Rule 117   np_graph_2 -> empty
Rule 118   np_graph_3 -> empty
Rule 119   np_graph_4 -> empty
Rule 120   np_graph_5 -> empty
Rule 121   np_graph_6 -> empty
Rule 122   np_graph_7 -> empty
Rule 123   np_graph_8 -> empty
Rule 124   np_graph_9 -> empty
Rule 125   np_graph_10 -> empty
Rule 126   np_var_a1 -> empty
Rule 127   np_var_a2 -> empty
Rule 128   np_var_b1 -> empty
Rule 129   np_var_b2 -> empty
Rule 130   np_var_b3 -> empty
Rule 131   np_var_b4 -> empty
Rule 132   np_var_b5 -> empty
Rule 133   np_var_b6 -> empty
Rule 134   np_var_c1 -> empty
Rule 135   np_var_c2 -> empty
Rule 136   np_var_c3 -> empty
Rule 137   np_var_1 -> empty
Rule 138   np_var_2 -> empty
Rule 139   np_var_3 -> empty
Rule 140   np_var_4 -> empty
Rule 141   np_var_5 -> empty
Rule 142   np_var_6 -> empty
Rule 143   np_var_7 -> empty
Rule 144   np_quad_a1_int -> empty
Rule 145   np_quad_a1_flt -> empty
Rule 146   np_quad_a1_chr -> empty
Rule 147   np_quad_a1_str -> empty
Rule 148   np_quad_a1_bol -> empty
Rule 149   np_quad_a2 -> empty
Rule 150   np_quad_b -> empty
Rule 151   np_quad_c0 -> empty
Rule 152   np_quad_c1 -> empty
Rule 153   np_quad_c2 -> empty
Rule 154   np_quad_c3 -> empty
Rule 155   np_quad_c4 -> empty
Rule 156   np_quad_d1 -> empty
Rule 157   np_quad_d2 -> empty
Rule 158   np_quad_d3 -> empty
Rule 159   np_quad_d4 -> empty
Rule 160   np_quad_d5 -> empty
Rule 161   np_quad_print -> empty
Rule 162   np_quad_assign -> empty
Rule 163   np_statutes_a1 -> empty
Rule 164   np_statutes_a2 -> empty
Rule 165   np_statutes_a3 -> empty
Rule 166   np_statutes_b1 -> empty
Rule 167   np_statutes_b2 -> empty
Rule 168   np_statutes_b3 -> empty
Rule 169   np_statutes_c1 -> empty
Rule 170   np_statutes_c2 -> empty
Rule 171   np_statutes_d1 -> empty
Rule 172   np_statutes_d2 -> empty
Rule 173   np_statutes_d3 -> empty
Rule 174   np_statutes_d4 -> empty
Rule 175   np_goto_main -> empty
Rule 176   np_era -> empty
Rule 177   np_gosub -> empty
Rule 178   np_param -> empty
Rule 179   np_return -> empty
Rule 180   debug -> empty
Rule 181   np_eof -> empty
Rule 182   empty -> <empty>

Terminals, with rules where they appear

ADDCONN              : 108
ADDNODE              : 106
AND                  : 69
ARC                  : 32 115
BOOL                 : 30
CHAR                 : 29
COLON                : 
COMA                 : 5 18 20 66 106 108 108 110 111 112
CTE_BOO              : 101
CTE_CHAR             : 103
CTE_FLO              : 100
CTE_INT              : 35 36 95 99
CTE_STRING           : 102
DEGREE               : 105
DELETEC              : 112
DELETEN              : 113
DIAMETER             : 114
DIRECTED             : 34
DIV                  : 84
DO                   : 60
DOT                  : 104
ELSE                 : 53
EQL                  : 47 48
EQUALTO              : 76
FLOAT                : 27
FOR                  : 61 62
GETNODE              : 107
ID                   : 1 4 5 8 17 18 19 20 47 48 61 62 62 63 64 92 93 96 104
IF                   : 52
IN                   : 62
INT                  : 26
LBRACK               : 8 21 52 53 59 60 61 62
LCORCH               : 35 36 94 97
LESSEQUAL            : 74
LESST                : 72
LPAREN               : 8 21 49 52 59 60 61 62 63 64 88 105 106 107 108 109 110 111 112 113
MAIN                 : 21
MOREEQUAL            : 75
MORET                : 73
MUL                  : 83
NODE                 : 31
NOT                  : 87
NOTEQUALTO           : 77
OR                   : 70
PRINT                : 49
PRINTCO              : 109
PROGRAM              : 1
RBRACK               : 8 21 52 53 59 60 61 62
RCORCH               : 35 36 94 97
RESD                 : 85
RETURN               : 67
RPAREN               : 8 21 49 52 59 60 61 62 63 64 88 105 106 107 108 109 110 111 112 113
SCOLO                : 1 2 44 45 47 48 49 60 61 61 67
SHORTNO              : 111
SHORTWE              : 110
STRING               : 28
SUB                  : 81
SUMA                 : 51 80
UNDIRECTED           : 33
VAR                  : 2
VOID                 : 10
WHILE                : 59 60
error                : 

Nonterminals, with rules where they appear

arrary_access_1      : 94 97
arrary_access_2      : 94
array_access         : 48 93
array_declare        : 6 19 20
array_declare_1      : 35
assignation          : 40 61
body                 : 1
c_do                 : 56
c_for                : 57
c_forin              : 58
c_while              : 55
condition            : 42
condition_1          : 52
cycle                : 43
debug                : 21
empty                : 3 7 9 16 37 39 54 78 98 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181
exp_lv1              : 68 69 70
exp_lv1_1            : 71
exp_lv2              : 71 72 73 74 75 76 77 80 81
exp_lv3              : 79 80 81 83 84 85
exp_lv4              : 82 83 84 85
exp_lv5              : 86 87
expression           : 47 48 50 51 52 59 60 61 65 66 67 69 70 88 105 106 106 107 108 108 108 109 110 110 111 111 112 112 113
function             : 1 8
function_call        : 44 90
function_call_1      : 63 66
function_t           : 8
function_v           : 8
function_v1          : 15 18 20
method               : 45 91
method_t             : 104
np_eof               : 21
np_era               : 63 64
np_gosub             : 63 64
np_goto_main         : 1
np_graph_1           : 104
np_graph_10          : 113
np_graph_2           : 105
np_graph_3           : 106
np_graph_4           : 107
np_graph_5           : 108
np_graph_6           : 109
np_graph_7           : 110
np_graph_8           : 111
np_graph_9           : 112
np_param             : 65 66
np_quad_a1_bol       : 101
np_quad_a1_chr       : 103
np_quad_a1_flt       : 100
np_quad_a1_int       : 95 99
np_quad_a1_str       : 102
np_quad_a2           : 47 48 92 93 96
np_quad_assign       : 47 48
np_quad_b            : 47 48 49 51 69 70 72 73 74 75 76 77 80 81 83 84 85 87
np_quad_c0           : 69 70
np_quad_c1           : 72 73 74 75 76 77
np_quad_c2           : 51 80 81
np_quad_c3           : 83 84 85
np_quad_c4           : 87
np_quad_d1           : 94
np_quad_d2           : 94
np_quad_d3           : 97
np_quad_d4           : 97
np_quad_d5           : 94
np_quad_print        : 49
np_return            : 67
np_statutes_a1       : 52
np_statutes_a2       : 53
np_statutes_a3       : 52
np_statutes_b1       : 59
np_statutes_b2       : 59
np_statutes_b3       : 59
np_statutes_c1       : 60
np_statutes_c2       : 60
np_statutes_d1       : 61
np_statutes_d2       : 61
np_statutes_d3       : 61
np_statutes_d4       : 61
np_var_1             : 10 26 27 28 29 30 31 32 33 34
np_var_2             : 4 5
np_var_3             : 35
np_var_4             : 35
np_var_5             : 36
np_var_6             : 36
np_var_7             : 35
np_var_a1            : 1
np_var_a2            : 1
np_var_b1            : 
np_var_b2            : 8
np_var_b3            : 8
np_var_b4            : 17 18 19 20
np_var_b5            : 17 18 19 20
np_var_b6            : 8
np_var_c1            : 21
np_var_c2            : 21
np_var_c3            : 21
program              : 0
return               : 46
statutes             : 8 21 38 52 53 59 60 61 62
statutes_1           : 38
t_bool               : 13 24
t_graph              : 14 25
t_number             : 11 22
t_string             : 12 23
type                 : 2 17 18 19 20
var_cte              : 89
vars                 : 1 2 8 21
vars_1               : 2 5
vars_2               : 4 5
writing              : 41
writing_1            : 49 51
writing_2            : 

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID np_var_a1 SCOLO np_var_a2 vars np_goto_main function body

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID np_var_a1 SCOLO np_var_a2 vars np_goto_main function body

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . np_var_a1 SCOLO np_var_a2 vars np_goto_main function body
    (126) np_var_a1 -> . empty
    (182) empty -> .

    SCOLO           reduce using rule 182 (empty -> .)

    np_var_a1                      shift and go to state 4
    empty                          shift and go to state 5

state 4

    (1) program -> PROGRAM ID np_var_a1 . SCOLO np_var_a2 vars np_goto_main function body

    SCOLO           shift and go to state 6


state 5

    (126) np_var_a1 -> empty .

    SCOLO           reduce using rule 126 (np_var_a1 -> empty .)


state 6

    (1) program -> PROGRAM ID np_var_a1 SCOLO . np_var_a2 vars np_goto_main function body
    (127) np_var_a2 -> . empty
    (182) empty -> .

    VAR             reduce using rule 182 (empty -> .)
    VOID            reduce using rule 182 (empty -> .)
    INT             reduce using rule 182 (empty -> .)
    FLOAT           reduce using rule 182 (empty -> .)
    STRING          reduce using rule 182 (empty -> .)
    CHAR            reduce using rule 182 (empty -> .)
    BOOL            reduce using rule 182 (empty -> .)
    NODE            reduce using rule 182 (empty -> .)
    ARC             reduce using rule 182 (empty -> .)
    UNDIRECTED      reduce using rule 182 (empty -> .)
    DIRECTED        reduce using rule 182 (empty -> .)
    MAIN            reduce using rule 182 (empty -> .)

    np_var_a2                      shift and go to state 7
    empty                          shift and go to state 8

state 7

    (1) program -> PROGRAM ID np_var_a1 SCOLO np_var_a2 . vars np_goto_main function body
    (2) vars -> . VAR type vars_1 SCOLO vars
    (3) vars -> . empty
    (182) empty -> .

    VAR             shift and go to state 10
    VOID            reduce using rule 182 (empty -> .)
    INT             reduce using rule 182 (empty -> .)
    FLOAT           reduce using rule 182 (empty -> .)
    STRING          reduce using rule 182 (empty -> .)
    CHAR            reduce using rule 182 (empty -> .)
    BOOL            reduce using rule 182 (empty -> .)
    NODE            reduce using rule 182 (empty -> .)
    ARC             reduce using rule 182 (empty -> .)
    UNDIRECTED      reduce using rule 182 (empty -> .)
    DIRECTED        reduce using rule 182 (empty -> .)
    MAIN            reduce using rule 182 (empty -> .)

    vars                           shift and go to state 9
    empty                          shift and go to state 11

state 8

    (127) np_var_a2 -> empty .

    VAR             reduce using rule 127 (np_var_a2 -> empty .)
    VOID            reduce using rule 127 (np_var_a2 -> empty .)
    INT             reduce using rule 127 (np_var_a2 -> empty .)
    FLOAT           reduce using rule 127 (np_var_a2 -> empty .)
    STRING          reduce using rule 127 (np_var_a2 -> empty .)
    CHAR            reduce using rule 127 (np_var_a2 -> empty .)
    BOOL            reduce using rule 127 (np_var_a2 -> empty .)
    NODE            reduce using rule 127 (np_var_a2 -> empty .)
    ARC             reduce using rule 127 (np_var_a2 -> empty .)
    UNDIRECTED      reduce using rule 127 (np_var_a2 -> empty .)
    DIRECTED        reduce using rule 127 (np_var_a2 -> empty .)
    MAIN            reduce using rule 127 (np_var_a2 -> empty .)


state 9

    (1) program -> PROGRAM ID np_var_a1 SCOLO np_var_a2 vars . np_goto_main function body
    (175) np_goto_main -> . empty
    (182) empty -> .

    VOID            reduce using rule 182 (empty -> .)
    INT             reduce using rule 182 (empty -> .)
    FLOAT           reduce using rule 182 (empty -> .)
    STRING          reduce using rule 182 (empty -> .)
    CHAR            reduce using rule 182 (empty -> .)
    BOOL            reduce using rule 182 (empty -> .)
    NODE            reduce using rule 182 (empty -> .)
    ARC             reduce using rule 182 (empty -> .)
    UNDIRECTED      reduce using rule 182 (empty -> .)
    DIRECTED        reduce using rule 182 (empty -> .)
    MAIN            reduce using rule 182 (empty -> .)

    np_goto_main                   shift and go to state 12
    empty                          shift and go to state 13

state 10

    (2) vars -> VAR . type vars_1 SCOLO vars
    (22) type -> . t_number
    (23) type -> . t_string
    (24) type -> . t_bool
    (25) type -> . t_graph
    (26) t_number -> . INT np_var_1
    (27) t_number -> . FLOAT np_var_1
    (28) t_string -> . STRING np_var_1
    (29) t_string -> . CHAR np_var_1
    (30) t_bool -> . BOOL np_var_1
    (31) t_graph -> . NODE np_var_1
    (32) t_graph -> . ARC np_var_1
    (33) t_graph -> . UNDIRECTED np_var_1
    (34) t_graph -> . DIRECTED np_var_1

    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    CHAR            shift and go to state 22
    BOOL            shift and go to state 23
    NODE            shift and go to state 24
    ARC             shift and go to state 25
    UNDIRECTED      shift and go to state 26
    DIRECTED        shift and go to state 27

    type                           shift and go to state 14
    t_number                       shift and go to state 15
    t_string                       shift and go to state 16
    t_bool                         shift and go to state 17
    t_graph                        shift and go to state 18

state 11

    (3) vars -> empty .

    VOID            reduce using rule 3 (vars -> empty .)
    INT             reduce using rule 3 (vars -> empty .)
    FLOAT           reduce using rule 3 (vars -> empty .)
    STRING          reduce using rule 3 (vars -> empty .)
    CHAR            reduce using rule 3 (vars -> empty .)
    BOOL            reduce using rule 3 (vars -> empty .)
    NODE            reduce using rule 3 (vars -> empty .)
    ARC             reduce using rule 3 (vars -> empty .)
    UNDIRECTED      reduce using rule 3 (vars -> empty .)
    DIRECTED        reduce using rule 3 (vars -> empty .)
    MAIN            reduce using rule 3 (vars -> empty .)
    ID              reduce using rule 3 (vars -> empty .)
    PRINT           reduce using rule 3 (vars -> empty .)
    IF              reduce using rule 3 (vars -> empty .)
    RETURN          reduce using rule 3 (vars -> empty .)
    WHILE           reduce using rule 3 (vars -> empty .)
    DO              reduce using rule 3 (vars -> empty .)
    FOR             reduce using rule 3 (vars -> empty .)
    RBRACK          reduce using rule 3 (vars -> empty .)


state 12

    (1) program -> PROGRAM ID np_var_a1 SCOLO np_var_a2 vars np_goto_main . function body
    (8) function -> . function_t ID np_var_b2 np_var_b3 LPAREN function_v RPAREN LBRACK vars statutes RBRACK np_var_b6 function
    (9) function -> . empty
    (10) function_t -> . VOID np_var_1
    (11) function_t -> . t_number
    (12) function_t -> . t_string
    (13) function_t -> . t_bool
    (14) function_t -> . t_graph
    (182) empty -> .
    (26) t_number -> . INT np_var_1
    (27) t_number -> . FLOAT np_var_1
    (28) t_string -> . STRING np_var_1
    (29) t_string -> . CHAR np_var_1
    (30) t_bool -> . BOOL np_var_1
    (31) t_graph -> . NODE np_var_1
    (32) t_graph -> . ARC np_var_1
    (33) t_graph -> . UNDIRECTED np_var_1
    (34) t_graph -> . DIRECTED np_var_1

    VOID            shift and go to state 31
    MAIN            reduce using rule 182 (empty -> .)
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    CHAR            shift and go to state 22
    BOOL            shift and go to state 23
    NODE            shift and go to state 24
    ARC             shift and go to state 25
    UNDIRECTED      shift and go to state 26
    DIRECTED        shift and go to state 27

    function                       shift and go to state 28
    function_t                     shift and go to state 29
    empty                          shift and go to state 30
    t_number                       shift and go to state 32
    t_string                       shift and go to state 33
    t_bool                         shift and go to state 34
    t_graph                        shift and go to state 35

state 13

    (175) np_goto_main -> empty .

    VOID            reduce using rule 175 (np_goto_main -> empty .)
    INT             reduce using rule 175 (np_goto_main -> empty .)
    FLOAT           reduce using rule 175 (np_goto_main -> empty .)
    STRING          reduce using rule 175 (np_goto_main -> empty .)
    CHAR            reduce using rule 175 (np_goto_main -> empty .)
    BOOL            reduce using rule 175 (np_goto_main -> empty .)
    NODE            reduce using rule 175 (np_goto_main -> empty .)
    ARC             reduce using rule 175 (np_goto_main -> empty .)
    UNDIRECTED      reduce using rule 175 (np_goto_main -> empty .)
    DIRECTED        reduce using rule 175 (np_goto_main -> empty .)
    MAIN            reduce using rule 175 (np_goto_main -> empty .)


state 14

    (2) vars -> VAR type . vars_1 SCOLO vars
    (4) vars_1 -> . ID np_var_2 vars_2
    (5) vars_1 -> . ID np_var_2 vars_2 COMA vars_1

    ID              shift and go to state 37

    vars_1                         shift and go to state 36

state 15

    (22) type -> t_number .

    ID              reduce using rule 22 (type -> t_number .)


state 16

    (23) type -> t_string .

    ID              reduce using rule 23 (type -> t_string .)


state 17

    (24) type -> t_bool .

    ID              reduce using rule 24 (type -> t_bool .)


state 18

    (25) type -> t_graph .

    ID              reduce using rule 25 (type -> t_graph .)


state 19

    (26) t_number -> INT . np_var_1
    (137) np_var_1 -> . empty
    (182) empty -> .

    ID              reduce using rule 182 (empty -> .)

    np_var_1                       shift and go to state 38
    empty                          shift and go to state 39

state 20

    (27) t_number -> FLOAT . np_var_1
    (137) np_var_1 -> . empty
    (182) empty -> .

    ID              reduce using rule 182 (empty -> .)

    np_var_1                       shift and go to state 40
    empty                          shift and go to state 39

state 21

    (28) t_string -> STRING . np_var_1
    (137) np_var_1 -> . empty
    (182) empty -> .

    ID              reduce using rule 182 (empty -> .)

    np_var_1                       shift and go to state 41
    empty                          shift and go to state 39

state 22

    (29) t_string -> CHAR . np_var_1
    (137) np_var_1 -> . empty
    (182) empty -> .

    ID              reduce using rule 182 (empty -> .)

    np_var_1                       shift and go to state 42
    empty                          shift and go to state 39

state 23

    (30) t_bool -> BOOL . np_var_1
    (137) np_var_1 -> . empty
    (182) empty -> .

    ID              reduce using rule 182 (empty -> .)

    np_var_1                       shift and go to state 43
    empty                          shift and go to state 39

state 24

    (31) t_graph -> NODE . np_var_1
    (137) np_var_1 -> . empty
    (182) empty -> .

    ID              reduce using rule 182 (empty -> .)

    np_var_1                       shift and go to state 44
    empty                          shift and go to state 39

state 25

    (32) t_graph -> ARC . np_var_1
    (137) np_var_1 -> . empty
    (182) empty -> .

    ID              reduce using rule 182 (empty -> .)

    np_var_1                       shift and go to state 45
    empty                          shift and go to state 39

state 26

    (33) t_graph -> UNDIRECTED . np_var_1
    (137) np_var_1 -> . empty
    (182) empty -> .

    ID              reduce using rule 182 (empty -> .)

    np_var_1                       shift and go to state 46
    empty                          shift and go to state 39

state 27

    (34) t_graph -> DIRECTED . np_var_1
    (137) np_var_1 -> . empty
    (182) empty -> .

    ID              reduce using rule 182 (empty -> .)

    np_var_1                       shift and go to state 47
    empty                          shift and go to state 39

state 28

    (1) program -> PROGRAM ID np_var_a1 SCOLO np_var_a2 vars np_goto_main function . body
    (21) body -> . MAIN np_var_c1 LPAREN RPAREN LBRACK np_var_c2 vars statutes RBRACK np_eof debug np_var_c3

    MAIN            shift and go to state 49

    body                           shift and go to state 48

state 29

    (8) function -> function_t . ID np_var_b2 np_var_b3 LPAREN function_v RPAREN LBRACK vars statutes RBRACK np_var_b6 function

    ID              shift and go to state 50


state 30

    (9) function -> empty .

    MAIN            reduce using rule 9 (function -> empty .)


state 31

    (10) function_t -> VOID . np_var_1
    (137) np_var_1 -> . empty
    (182) empty -> .

    ID              reduce using rule 182 (empty -> .)

    np_var_1                       shift and go to state 51
    empty                          shift and go to state 39

state 32

    (11) function_t -> t_number .

    ID              reduce using rule 11 (function_t -> t_number .)


state 33

    (12) function_t -> t_string .

    ID              reduce using rule 12 (function_t -> t_string .)


state 34

    (13) function_t -> t_bool .

    ID              reduce using rule 13 (function_t -> t_bool .)


state 35

    (14) function_t -> t_graph .

    ID              reduce using rule 14 (function_t -> t_graph .)


state 36

    (2) vars -> VAR type vars_1 . SCOLO vars

    SCOLO           shift and go to state 52


state 37

    (4) vars_1 -> ID . np_var_2 vars_2
    (5) vars_1 -> ID . np_var_2 vars_2 COMA vars_1
    (138) np_var_2 -> . empty
    (182) empty -> .

    COMA            reduce using rule 182 (empty -> .)
    LCORCH          reduce using rule 182 (empty -> .)
    SCOLO           reduce using rule 182 (empty -> .)

    np_var_2                       shift and go to state 53
    empty                          shift and go to state 54

state 38

    (26) t_number -> INT np_var_1 .

    ID              reduce using rule 26 (t_number -> INT np_var_1 .)


state 39

    (137) np_var_1 -> empty .

    ID              reduce using rule 137 (np_var_1 -> empty .)


state 40

    (27) t_number -> FLOAT np_var_1 .

    ID              reduce using rule 27 (t_number -> FLOAT np_var_1 .)


state 41

    (28) t_string -> STRING np_var_1 .

    ID              reduce using rule 28 (t_string -> STRING np_var_1 .)


state 42

    (29) t_string -> CHAR np_var_1 .

    ID              reduce using rule 29 (t_string -> CHAR np_var_1 .)


state 43

    (30) t_bool -> BOOL np_var_1 .

    ID              reduce using rule 30 (t_bool -> BOOL np_var_1 .)


state 44

    (31) t_graph -> NODE np_var_1 .

    ID              reduce using rule 31 (t_graph -> NODE np_var_1 .)


state 45

    (32) t_graph -> ARC np_var_1 .

    ID              reduce using rule 32 (t_graph -> ARC np_var_1 .)


state 46

    (33) t_graph -> UNDIRECTED np_var_1 .

    ID              reduce using rule 33 (t_graph -> UNDIRECTED np_var_1 .)


state 47

    (34) t_graph -> DIRECTED np_var_1 .

    ID              reduce using rule 34 (t_graph -> DIRECTED np_var_1 .)


state 48

    (1) program -> PROGRAM ID np_var_a1 SCOLO np_var_a2 vars np_goto_main function body .

    $end            reduce using rule 1 (program -> PROGRAM ID np_var_a1 SCOLO np_var_a2 vars np_goto_main function body .)


state 49

    (21) body -> MAIN . np_var_c1 LPAREN RPAREN LBRACK np_var_c2 vars statutes RBRACK np_eof debug np_var_c3
    (134) np_var_c1 -> . empty
    (182) empty -> .

    LPAREN          reduce using rule 182 (empty -> .)

    np_var_c1                      shift and go to state 55
    empty                          shift and go to state 56

state 50

    (8) function -> function_t ID . np_var_b2 np_var_b3 LPAREN function_v RPAREN LBRACK vars statutes RBRACK np_var_b6 function
    (129) np_var_b2 -> . empty
    (182) empty -> .

    LPAREN          reduce using rule 182 (empty -> .)

    np_var_b2                      shift and go to state 57
    empty                          shift and go to state 58

state 51

    (10) function_t -> VOID np_var_1 .

    ID              reduce using rule 10 (function_t -> VOID np_var_1 .)


state 52

    (2) vars -> VAR type vars_1 SCOLO . vars
    (2) vars -> . VAR type vars_1 SCOLO vars
    (3) vars -> . empty
    (182) empty -> .

    VAR             shift and go to state 10
    VOID            reduce using rule 182 (empty -> .)
    INT             reduce using rule 182 (empty -> .)
    FLOAT           reduce using rule 182 (empty -> .)
    STRING          reduce using rule 182 (empty -> .)
    CHAR            reduce using rule 182 (empty -> .)
    BOOL            reduce using rule 182 (empty -> .)
    NODE            reduce using rule 182 (empty -> .)
    ARC             reduce using rule 182 (empty -> .)
    UNDIRECTED      reduce using rule 182 (empty -> .)
    DIRECTED        reduce using rule 182 (empty -> .)
    MAIN            reduce using rule 182 (empty -> .)
    ID              reduce using rule 182 (empty -> .)
    PRINT           reduce using rule 182 (empty -> .)
    IF              reduce using rule 182 (empty -> .)
    RETURN          reduce using rule 182 (empty -> .)
    WHILE           reduce using rule 182 (empty -> .)
    DO              reduce using rule 182 (empty -> .)
    FOR             reduce using rule 182 (empty -> .)
    RBRACK          reduce using rule 182 (empty -> .)

    vars                           shift and go to state 59
    empty                          shift and go to state 11

state 53

    (4) vars_1 -> ID np_var_2 . vars_2
    (5) vars_1 -> ID np_var_2 . vars_2 COMA vars_1
    (6) vars_2 -> . array_declare
    (7) vars_2 -> . empty
    (35) array_declare -> . np_var_3 LCORCH CTE_INT np_var_4 RCORCH array_declare_1 np_var_7
    (182) empty -> .
    (139) np_var_3 -> . empty
